--- a/src/Otp.NET/Otp.NET.csproj
+++ b/src/Otp.NET/Otp.NET.csproj
@@ -1,8 +1,8 @@
-﻿<Project Sdk="MSBuild.Sdk.Extras">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<Version>1.2.3</Version>
-		<TargetFrameworks>uap10.0.17763;uap10.0.26100;net9.0</TargetFrameworks>
+		<TargetFrameworks>net9.0;net10.0;netstandard2.0</TargetFrameworks>
 		<PackageId>Otp.NET</PackageId>
 		<Title>Otp.NET</Title>
 		<Authors>Kyle Spearrin</Authors>
@@ -23,12 +23,8 @@
 		<LangVersion>13.0</LangVersion>
 	</PropertyGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)'=='uap10.0.17763' or '$(TargetFramework)'=='uap10.0.26100'">
-		<PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.14" />
-	</ItemGroup>
-
 	<ItemGroup>
-		<PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="9.0.0">
+		<PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="10.0.100">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
